--- a/src/Monyk.Lab.Main/Monyk.Lab.Main.csproj
+++ b/src/Monyk.Lab.Main/Monyk.Lab.Main.csproj
@@ -3,11 +3,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>8861a054-e84f-4de4-8c51-3dadca808712</UserSecretsId>
-    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
-  <LangVersion>latest</LangVersion></PropertyGroup>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
@@ -26,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings*.yml">
+    <None Update="appsettings.*.yml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
