--- a/src/Monyk.Probe.Main/Monyk.Probe.Main.csproj
+++ b/src/Monyk.Probe.Main/Monyk.Probe.Main.csproj
@@ -2,12 +2,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <LangVersion>latest</LangVersion>
     <UserSecretsId>50b01a61-fc0b-4936-873f-adca2d46efc5</UserSecretsId>
-    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <ServerGarbageCollection>false</ServerGarbageCollection>
   </PropertyGroup>
@@ -34,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings*.yml">
+    <None Update="appsettings.*yml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
