--- a/src/Monyk.GroundControl.Main/appsettings-reference.yml
+++ b/src/Monyk.GroundControl.Main/appsettings-reference.yml
@@ -4,7 +4,7 @@
 Communicator:
   RabbitMQ:
     Host: <required>
-    VHost: /
+    VHost: <required>
     UserName: <required>
     Password: <required>
 GroundControl:
