--- a/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
+++ b/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-  <LangVersion>latest</LangVersion></PropertyGroup>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Monyk.GroundControl.Models\Monyk.GroundControl.Models.csproj" />
