--- a/src/Monyk.GroundControl.Services/Monyk.GroundControl.Services.csproj
+++ b/src/Monyk.GroundControl.Services/Monyk.GroundControl.Services.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-  <LangVersion>latest</LangVersion></PropertyGroup>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
