--- a/test/Monyk.Probe.Checkers.Tests/Monyk.Probe.Checkers.Tests.csproj
+++ b/test/Monyk.Probe.Checkers.Tests/Monyk.Probe.Checkers.Tests.csproj
@@ -3,9 +3,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-
     <IsPackable>false</IsPackable>
-  <LangVersion>latest</LangVersion></PropertyGroup>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
