--- a/src/Monyk.Lab.Main/appsettings.Development.yml
+++ b/src/Monyk.Lab.Main/appsettings.Development.yml
@@ -1,4 +1,10 @@
-﻿Seq:
+﻿Logging: 
+  LogLevel: 
+    Default: Debug
+    System: Information
+    Microsoft: Information
+  
+Seq:
   ServerUrl: http://localhost:5341
 
 Communicator:
