--- a/src/Monyk.GroundControl.Main/appsettings.Test.yml
+++ b/src/Monyk.GroundControl.Main/appsettings.Test.yml
@@ -1,3 +1,8 @@
-﻿Logging: 
-  LogLevel: 
+﻿Serilog:
+  MinimumLevel:
     Default: Information
+    Override:
+      Microsoft: Warning
+      System: Warning
+  Enrich:
+  - WithMachineName
