--- a/src/Monyk.Lab.Main/appsettings.Development.yml
+++ b/src/Monyk.Lab.Main/appsettings.Development.yml
@@ -1,12 +1,5 @@
-﻿Logging: 
-  LogLevel: 
-    Default: Debug
-    System: Information
-    Microsoft: Information
-  
-Seq:
-  ServerUrl: http://localhost:5341
-
+﻿Serilog:
+  MinimumLevel: Debug
 Communicator:
   RabbitMQ:
     Host: localhost
