--- a/src/Monyk.GroundControl.Main/Dockerfile
+++ b/src/Monyk.GroundControl.Main/Dockerfile
@@ -1,21 +1,23 @@
-FROM microsoft/dotnet:2.2-aspnetcore-runtime-stretch-slim AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM microsoft/dotnet:2.2-sdk-stretch AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
 WORKDIR /src
-COPY ["Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj", "Monyk.GroundControl.Main/"]
-COPY ["Monyk.Common.Communicator/Monyk.Common.Communicator.csproj", "Monyk.Common.Communicator/"]
-COPY ["Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj", "Monyk.GroundControl.Db/"]
-COPY ["Monyk.GroundControl.Models/Monyk.GroundControl.Models.csproj", "Monyk.GroundControl.Models/"]
-COPY ["Monyk.Common.Models/Monyk.Common.Models.csproj", "Monyk.Common.Models/"]
-COPY ["Monyk.GroundControl.Services/Monyk.GroundControl.Services.csproj", "Monyk.GroundControl.Services/"]
-COPY ["Monyk.Common.Startup/Monyk.Common.Startup.csproj", "Monyk.Common.Startup/"]
-COPY ["Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj", "Monyk.GroundControl.Api/"]
-RUN dotnet restore "Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj"
+COPY ["src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj", "src/Monyk.GroundControl.Main/"]
+COPY ["src/Monyk.Common.Db/Monyk.Common.Db.csproj", "src/Monyk.Common.Db/"]
+COPY ["src/Monyk.Common.Startup/Monyk.Common.Startup.csproj", "src/Monyk.Common.Startup/"]
+COPY ["src/Monyk.Common.Communicator/Monyk.Common.Communicator.csproj", "src/Monyk.Common.Communicator/"]
+COPY ["src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj", "src/Monyk.GroundControl.Db/"]
+COPY ["src/Monyk.GroundControl.Models/Monyk.GroundControl.Models.csproj", "src/Monyk.GroundControl.Models/"]
+COPY ["src/Monyk.Common.Models/Monyk.Common.Models.csproj", "src/Monyk.Common.Models/"]
+COPY ["src/Monyk.GroundControl.Db.Migrations/Monyk.GroundControl.Db.Migrations.csproj", "src/Monyk.GroundControl.Db.Migrations/"]
+COPY ["src/Monyk.GroundControl.Services/Monyk.GroundControl.Services.csproj", "src/Monyk.GroundControl.Services/"]
+COPY ["src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj", "src/Monyk.GroundControl.Api/"]
+RUN dotnet restore "src/Monyk.GroundControl.Main/Monyk.GroundControl.Main.csproj"
 COPY . .
-WORKDIR "/src/Monyk.GroundControl.Main"
+WORKDIR "/src/src/Monyk.GroundControl.Main"
 RUN dotnet build "Monyk.GroundControl.Main.csproj" -c Release -o /app
 
 FROM build AS publish
