Improve dev. experience

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -40,7 +40,7 @@ services:
       - MONYK_Communicator__RabbitMQ__Host=rabbitmq
       - MONYK_Lab__GroundControlBaseUrl=http://monyk.groundcontrol.main
       - MONYK_Lab__Database__Type=postgres
-      - MONYK_Lab__Database__ConnectionString=Host=postgres;Username=postgres;Password=postgres;Database=groundcontrol
+      - MONYK_Lab__Database__ConnectionString=Host=postgres;Username=postgres;Password=postgres;Database=lab
     ports:
       - "42132:80"
       - "42133:443"
