--- a/src/Monyk.Probe.Main/Properties/launchSettings.json
+++ b/src/Monyk.Probe.Main/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Monyk.Probe.Main": {
+    "Kestrel - Development": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
