--- a/src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj
+++ b/src/Monyk.GroundControl.Db/Monyk.GroundControl.Db.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Monyk.Common.Db\Monyk.Common.Db.csproj" />
     <ProjectReference Include="..\Monyk.Common.Startup\Monyk.Common.Startup.csproj" />
     <ProjectReference Include="..\Monyk.GroundControl.Models\Monyk.GroundControl.Models.csproj" />
     <ProjectReference Include="..\Monyk.Common.Models\Monyk.Common.Models.csproj" />
