--- a/src/Monyk.GroundControl.Main/Properties/launchSettings.json
+++ b/src/Monyk.GroundControl.Main/Properties/launchSettings.json
@@ -9,7 +9,7 @@
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
+    "IIS Express - Development": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
