--- a/src/Monyk.Lab.Main/Properties/launchSettings.json
+++ b/src/Monyk.Lab.Main/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "IIS Express": {
+    "IIS Express - Development": {
       "commandName": "IISExpress",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,12 @@
       "applicationUrl": "https://localhost:42131;http://localhost:42130"
     },
     "Docker": {
-      "commandName": "Docker"
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "httpPort": 42130,
+      "useSSL": true,
+      "sslPort": 42131
     }
   }
 }
