--- a/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
+++ b/src/Monyk.GroundControl.Api/Monyk.GroundControl.Api.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.1.2" />
   </ItemGroup>
 
 </Project>
